# didomi-challenge

./: README.md  interview-challenge.sh  run.sh
docker/: docker-compose.yml  docker.env
docker/minio/: .env  setup.sh
docker/minio/data/config/common/: config.json
docker/minio/data/config/jobs/metrics/: config.json
docker/spark/: .env  Dockerfile
docker/spark/conf/: log4j.properties  spark-defaults.conf
interview-challenge-app/: pyproject.toml
interview-challenge-app/interview_challenge_app/: main.py
interview-challenge-app/interview_challenge_app/common/: utils.py
interview-challenge-app/interview_challenge_app/jobs/metrics/: metrics_job.py
interview-challenge-app/tests/: conftest.py  helpers.py  test_metrics.py  test_utils.py
interview-challenge-app/tests/data/test_metrics/compute_metrics/expected/: data.json
interview-challenge-app/tests/data/test_metrics/compute_metrics/input/datehour=2021-01-23-10/: data.json
interview-challenge-app/tests/data/test_metrics/prepare_events/expected/: data.json
interview-challenge-app/tests/data/test_metrics/prepare_events/input/: data.json
interview-challenge-app/tests/data/test_utils/deduplicate_df/expected/: data.json
interview-challenge-app/tests/data/test_utils/deduplicate_df/input/: data.json
interview-challenge-app/tests/data/test_utils/lower_df_column_names/expected/: data.json
interview-challenge-app/tests/data/test_utils/lower_df_column_names/input/: data.json
