[tool.poetry]
name = "interview_challenge_app"
version = "0.1.0"
description = "interview data engineering challenge."
authors = ["Redha Arfi <redha.arfi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.20.24"
py4j = "^0.10.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
chispa = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
